# quarto-hybrid-docs

./: .gitignore  README.html  README.md  pyproject.toml
quarto/: _quarto.yml  index.qmd
quarto/contents/python/: sample_python.qmd
quarto/contents/r/: sample_r.qmd
quarto/docs/: index.html  search.json
quarto/docs/contents/python/: sample_python.html
quarto/docs/contents/r/: sample_r.html
quarto/functions/: _middleware.js
