[tool.poetry]
name = "quarto-hybrid-docs"
version = "0.1.0"
description = ""
authors = ["dmaruyama-51 <0501awasuram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
pyyaml = "^6.0.2"
nbformat = "^5.10.4"
nbclient = "^0.10.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
